name:                sdl2gl
version:             0.1.0.0
synopsis:            sdl2 testing
-- description:
homepage:            https://github.com/soupi/haskell-sdl2gl.git
license:             MIT
license-file:        LICENSE
author:              suppi
maintainer:          soupiral@gmail.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable sdl2gl
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    LambdaCase
  build-depends:       base >=4.7
                      ,sdl2
                      ,text
                      ,linear >= 1.10.1.2
  hs-source-dirs: src
  default-language:    Haskell2010

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 
                 -fno-warn-orphans
